tests/error/subtractInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin subtractInteger)(con string "Ola")](con integer 10)])